# Operationl_Careflow-AI

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  api_routes.py  app.py  crew_runner.py  schemas.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  styles.css
frontend/src/components/: EmptyState.tsx  Enterprise.tsx  MetricCard.tsx  PressureGauge.tsx  Section.tsx  Skeleton.tsx  StatusBanner.tsx
frontend/src/pages/: DecisionBriefing.tsx  ExecutiveDashboard.tsx  Forecasting.tsx  GoogleCovidInsights.tsx  GpuBenchmarkPanel.tsx  HospitalResourcePressure.tsx  RiskAllocation.tsx  formatters.ts
frontend/src/services/: api.ts
frontend/src/types/: careflow.ts
src/operational_careflow_ai___intelligence_layer/: agents.py  crew.py  main.py
src/operational_careflow_ai___intelligence_layer/config/: agents.yaml  tasks.yaml
src/operational_careflow_ai___intelligence_layer/tools/: custom_tool.py  google_covid_bulk_data_tool.py  google_covid_epidemiology_tool.py  google_covid_hospitalizations_tool.py  gpu_benchmark_tool.py
tests/: test_api_and_agents.py  test_careflow_tools.py
