[project]
name = "operational_careflow_ai___intelligence_layer"
version = "0.1.0"
description = "operational_careflow_ai___intelligence_layer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.15.0",
]

[project.scripts]
operational_careflow_ai___intelligence_layer = "operational_careflow_ai___intelligence_layer.main:run"
run_crew = "operational_careflow_ai___intelligence_layer.main:run"
train = "operational_careflow_ai___intelligence_layer.main:train"
replay = "operational_careflow_ai___intelligence_layer.main:replay"
test = "operational_careflow_ai___intelligence_layer.main:test"
run_with_trigger = "operational_careflow_ai___intelligence_layer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
