[project]
name = "operational_careflow_ai___intelligence_layer"
version = "0.1.0"
description = "GPU-accelerated CareFlow AI using CrewAI"
authors = [{ name = "Nikhil Raman K", email = "nikhilramank@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.15.0",
    "requests",
    "pandas",
    "python-dotenv",
    "pydantic",
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
operational_careflow_ai___intelligence_layer = "operational_careflow_ai___intelligence_layer.main:run"
run_crew = "operational_careflow_ai___intelligence_layer.main:run"
train = "operational_careflow_ai___intelligence_layer.main:train"
replay = "operational_careflow_ai___intelligence_layer.main:replay"
test = "operational_careflow_ai___intelligence_layer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
